feat: add update book endpoint
